--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = "1.0.215"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
 tokio-cron-scheduler = "0.13.0"
+toml = "0.8.19"
