--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 env_logger = "0.11.5"
+humantime = "2.1.0"
 log = "0.4.22"
 poise = "0.6.1"
 serde = "1.0.215"
