--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "0.11.5"
 humantime = "2.1.0"
 image = "0.25.5"
 log = "0.4.22"
+num-format = "0.4.4"
 poise = "0.6.1"
 rand = "0.8.5"
 regex = "1.11.1"
